# multi_mav_manager

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
config/: gains.yaml  mav_manager.yaml  params.yaml  rviz_config.rviz  sim_params.yaml
config/crazyflie/: .tracker_params.yaml.swp  crazyflie_information.md  gains.yaml  mav_manager.yaml  multi_mav_manager.yaml  multi_mav_manager_perch.yaml  rviz_config.rviz  sim_params.yaml  tracker_params.yaml
config/dragonfly/: QuadrotorQ2_gains.yaml  multi_mav_manager_dragonfly.yaml  multi_mav_manager_single.yaml  multimaster_groundstation.yaml  multimaster_remote.yaml  server_multimaster.yaml
config/hummingbird/: mav_manager.yaml  multi_mav_manager.yaml  params.yaml  rviz_config.rviz  tracker_params.yaml
include/multi_mav_manager/: mav_manager_interface.h  multi_mav_services.h
kr_multi_mav_manager/: CMakeLists.txt  package.xml
kr_multi_mav_manager/launch/: multi_mav_manager.launch  robot_common.launch  robot_common_rotate.launch  robot_tf_pub.launch
kr_multi_mav_manager/scripts/: aliases.sh  demo_gazebo.sh  demo_sim.sh  hummingbird_demo.sh
kr_multi_mav_manager/src/: mav_manager_interface.cpp  multi_mav_services.cpp
kr_multi_mav_manager/srv/: Formation.srv
launch/: multi_mav_manager.launch  multi_robot.launch  multi_robot_rviz.launch  robot.launch  robot_common.launch  robot_common_rotate.launch  robot_comms.launch  robot_sim.launch
launch/crazyflie/: crazyflie.launch  crazyflie_rotate.launch  multi_crazyflie.launch  multi_crazyflie_rotate.launch  multi_crazyflie_rotate_perch.launch  multi_crazyflie_rviz.launch
launch/dragonfly/: dragonfly_manager.launch  multi_dragonfly_gs.launch  multimaster_dragonfly_remote.launch
launch/hummingbird/: hummingbird.launch  hummingbird_rotate.launch  hummingbirds.launch  mocap.launch  multi_hummingbird.launch  multi_hummingbird_rotate.launch  multi_hummingbird_rviz.launch
rqt_multi_mav_gui/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_multi_mav_gui/resource/: MultiMavGUI.ui
rqt_multi_mav_gui/scripts/: rqt_multi_mav_gui
rqt_multi_mav_gui/src/rqt_multi_mav_gui/: multi_mav_gui.py
scripts/: aliases.sh  crazyflie_demo.bak  crazyflie_demo.sh  crazyflie_demo.sh.orig  crazyflie_demo_setup.sh  demo_gazebo.sh  demo_sim.sh  dragon_demo.sh  dragonfly_gs.sh  holiday_demo.sh  hummingbird_demo.sh  launch_generator.sh  multi_crazyflie_demo.sh  set_crazyflie_gains.sh
scripts/crazyflie/: crazyflie_demo.sh  crazyflie_demo_perch.sh  multi_crazyflie_demo.sh  (+1 more)
src/: mav_manager_interface.cpp  multi_mav_services.cpp
srv/: RawPosFormation.srv
(+51 files in other folders)
